Fixed scrollbars (added custom scrollbar style) Made console output optional

--- a/styles/base.less
+++ b/styles/base.less
@@ -20,3 +20,62 @@ atom-pane {
     border-right: none;
   }
 }
+
+.scrollbars-visible-always {
+  .vertical-scrollbar {
+    width: auto !important;
+    > div {
+      width: 0px;
+    }
+  }
+  .horizontal-scrollbar {
+    height: auto !important;
+    > div {
+      height: 0px;
+    }
+  }
+
+  /deep/ ::-webkit-scrollbar {
+    width: 18px;
+
+    /*&-button {
+      background-color: #f1f1f1;
+      line-height: 18px;
+      height: 18px;
+      width: 18px;
+
+      &:hover {
+        background-color: #c1c1c1;
+      }
+      &:active {
+        background-color: #a8a8a8;
+      }
+
+      &:vertical {
+        &:decrement {
+          content: '▲';
+        }
+        &:increment {
+          content: '▼';
+        }
+      }
+    }*/
+
+    &-track {
+      background-color: #f1f1f1;
+    }
+
+    &-thumb {
+      box-shadow:inset 0 0 0 2px #f1f1f1;
+      background-color: #c1c1c1;
+
+      &:hover {
+        background-color: #a8a8a8;
+      }
+
+      &:window-inactive {
+        background-color: #f1f1f1;
+      }
+    }
+  }
+}
